# OrvenCore-API-and-Auth

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_service_registry.py
app/: config.py  database.py  main.py
app/auth/: discord_link.py  jwt.py  passwords.py
app/dependencies/: auth.py
app/frontend/: app.js  index.html  styles.css
app/models/: __init__.py  api_key.py  discord_account.py  permission.py  role.py  service.py  session.py  user.py
app/routes/: admin.py  auth.py  discord.py  health.py  permissions.py  services.py  users.py
app/schemas/: admin.py  discord.py  permission.py  service.py  session.py  token.py  user.py
app/services/: api_keys.py  discord.py  permissions.py  registry.py  sessions.py  users.py
app/utils/: security.py
tests/: test_auth_flow.py
