[project]
name = "orvencore-api-and-auth"
version = "0.1.0"
description = "Central authentication, authorization, and integrations API for the OrvenCore ecosystem."
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13.0",
    "email-validator>=2.1.0",
    "fastapi>=0.115.0",
    "passlib>=1.7.4",
    "psycopg[binary]>=3.2.0",
    "pydantic-settings>=2.4.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0.30",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.2.0",
    "ruff>=0.5.0",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
